# x5s_csp_qt_12axis

./: .gitignore  CMakeLists.txt  README.md
config/: x5s_cstruct_reference.c
include/: control_worker.hpp  ethercat_master.hpp  pdo_config.hpp  shared_state.hpp  time_utils.hpp  x5s_axis.hpp
include/Ethercat/: cia402.hpp  config.hpp  ethercat_master.hpp  pdo_config.hpp  x5s_axis.hpp
include/Kinematics/: axis_unit_converter.hpp  parallel_kinematics.hpp
include/Motor/: Motor_Control.hpp  Multi_Parallel_Control.hpp  Parallel_Control.hpp  motor_enable.hpp  motor_home.hpp
include/QT/: PlateShapeInitWindow.hpp  PlateShapeMotionWorker.hpp  PlateShapeTypes.hpp  PlateShapeView.hpp  shared_state.hpp
include/Trajectory/: count_trajectory_generator.hpp
scripts/: check.sh  run.sh  run_qt.sh
src/: cia402.cpp  control_worker.cpp  ethercat_master.cpp  main_console_direct.cpp  main_qt.cpp  pdo_config.cpp  time_utils.cpp  x5s_axis.cpp
src/Ethercat/: cia402.cpp  ethercat_master.cpp  pdo_config.cpp  x5s_axis.cpp
src/Kinematics/: axis_unit_converter.cpp  parallel_kinematics.cpp
src/Main/: 1.cpp  InitialPosition.cpp  main_InitialPosition.cpp  main_console_direct.cpp  main_qt.cpp  test.cpp
src/Motor/: Motor_Control.cpp  Multi_Parallel_Control.cpp  Parallel_Control.cpp  motor_enable.cpp  motor_home.cpp
src/QT/: PlateShapeInitWindow.cpp  PlateShapeMotionWorker.cpp  PlateShapeView.cpp  control_worker.cpp  main_plateshapeInit_qt.cpp  main_qt.cpp
src/Trajectory/: count_trajectory_generator.cpp
